test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/assign_to_array_3.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  int
  (
  *
  identifier(ptr_to_array)
  )
  [
  const int(3)
  ]
  ;
  *
  identifier(ptr_to_array)
  =
  identifier(arr)
  ;
  }
